[package]
name = "dl_uuid"
version = "0.4.1"
authors = ["jhaboic <josiphaboic@gmail.com>", "suddenlyhazel <hazel@departure.dev>"]
edition = "2021"
description = "Universally unique identifier generator"
license = "Apache-2.0"
repository = "https://github.com/DepartureLabsIC/dl_uuid"
keywords = ["uuid", "dfinity", "internet_computer"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.0"
arc-swap = "0.4.8"
byteorder = "1.4.3"
rand_chacha = "0.3.1"